## Process this file with automake to produce Makefile.in

lib_LIBRARIES = libxloops.a
libxloops_a_SOURCES = oneloop_1pt.cpp oneloop_2pt.cpp oneloop_3pt.cpp r.cpp \
  po_redux.cpp pv.cpp assertion.h utils.cpp utils.h twoloop_2pt.cpp

xloopsincludedir = $(includedir)/xloops
xloopsinclude_HEADERS = xloops.h oneloop.h r.h po_redux.h twoloop.h
